=======
CHANGES
=======

0.4 (Unreleased)
----------------

- Added 'registerIn' module directive, it allows
  to redirect all registrations to different Components object.


0.3 (2011-06-02)
----------------

- Allow to redefine context of 'action' directive
  by passing frame object as '__frame' parameter.


0.1 (2011-05-27)
----------------

- Initial release