@@ -8,6 +8,9 @@ CHANGES
 - Added 'registerIn' module directive, it allows
   to redirect all registrations to different Components object.
 
+- Added abolity to load grokkers before other code. Usefull
+  if package implements some grokkers and uses them in the same time.
+
 
 0.3 (2011-06-02)
 ----------------
